# aranya

./: .gitmodules  Cargo.toml
crates/aranya-client-capi/output/: aranya-client.h
crates/aranya-client-capi/src/api/: defs.rs
crates/aranya-client/src/: client.rs
crates/aranya-daemon-api/src/: service.rs
crates/aranya-daemon/src/: actions.rs  api.rs  policy.md  policy.rs
examples/rust/: .gitignore  run.bash
examples/rust/aranya-cosmos-proxy/: Cargo.toml  README.md  example.env  run.bash
examples/rust/aranya-cosmos-proxy/cosmos/: plugin.txt
examples/rust/aranya-cosmos-proxy/cosmos/cmd_tlm/: tlm.txt
examples/rust/aranya-cosmos-proxy/src/: env copy.rs  env.rs  lib.rs  udp_forwarder.rs
examples/rust/aranya-cosmos-proxy/src/admin/: main.rs
examples/rust/aranya-cosmos-proxy/src/membera/: main.rs
examples/rust/aranya-cosmos-proxy/src/memberb/: main.rs
examples/rust/aranya-cosmos-proxy/src/operator/: main.rs
examples/rust/aranya-cosmos-proxy/src/owner/: main.rs
examples/rust/aranya-netcat/: .gitignore  Cargo.toml  README.md
examples/rust/aranya-netcat/daemon_a/: config.toml
examples/rust/aranya-netcat/daemon_b/: config.toml
examples/rust/cosmos-gate/: .gitignore  Cargo.toml  README.md
examples/rust/cosmos-gate/src/: lib.rs  main.rs  server.rs
examples/rust/example/: Cargo.toml
