[package]
name = "aranya-cosmos-proxy"
description = "Insert Aranya in between a ground OpenC3 COSMOS instance and a COSMOS target, as a UDP proxy"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[features]
default = []

# Enable debugging.
debug = []

[dependencies]
aranya-client = { workspace = true }
aranya-daemon-api = { workspace = true }
aranya-util = { workspace = true }

age = { version = "0.11.1" }
anyhow = { workspace = true }
backon = { workspace = true }
bytes = { workspace = true }
clap = { workspace = true }
postcard = { workspace = true }
serde = { workspace = true, features = ["derive"] }
tempfile = { workspace = true }
tokio = { workspace = true, features = ["io-util", "macros", "net", "sync", "process"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
bincode = "1.3"

[dev-dependencies]
serial_test = { workspace = true }
test-log = { workspace = true }

[[bin]]
name = "aranya-cosmos-proxy"
path = "src/bin/main.rs"
test = false

[[bin]]
name = "aranya-cosmos-proxy-owner"
path = "src/owner/main.rs"
test = false

[[bin]]
name = "aranya-cosmos-proxy-admin"
path = "src/admin/main.rs"
test = false

[[bin]]
name = "aranya-cosmos-proxy-operator"
path = "src/operator/main.rs"
test = false

[[bin]]
name = "aranya-cosmos-proxy-membera"
path = "src/membera/main.rs"
test = false

[[bin]]
name = "aranya-cosmos-proxy-memberb"
path = "src/memberb/main.rs"
test = false
