[package]
name = "cosmos-gate"
description = "Cosmos Gate: minimal Aranya app that evaluates outbound OpenC3 COSMOS commands against policy"
version = "0.1.0"
authors = ["SpiderOak, Inc."]
edition = "2021"
license = "AGPL-3.0-only"
repository = "https://github.com/aranya-project/aranya"
rust-version = "1.85"

[lints.rust]
rust_2018_idioms = { level = "warn", priority = -1 }
unsafe_op_in_unsafe_fn = "warn"
unused_lifetimes = "warn"
unused_qualifications = "warn"

[lints.clippy]
cast_lossless = "warn"
cast_possible_wrap = "warn"
cast_precision_loss = "warn"
cast_sign_loss = "warn"
panic = "warn"
unsafe_derive_deserialize = "warn"
undocumented_unsafe_blocks = "warn"
unwrap_used = "warn"
wildcard_imports = "warn"

[dependencies]
aranya-client = { path = "../../../crates/aranya-client", features = ["preview", "afc", "aqc", "experimental"] }
aranya-daemon-api = { path = "../../../crates/aranya-daemon-api", features = ["preview", "afc", "aqc", "experimental"] }
aranya-util = { path = "../../../crates/aranya-util" }

anyhow = { version = "1.0.97" }
backon = { version = "1.4.0" }
buggy = { version = "0.1.0" }
bytes = { version = "1.10.0" }
futures-util = { version = "0.3" }
tempfile = { version = "3.17.1" }
tokio = { version = "1.44.2", features = ["io-util", "macros", "net", "process", "sync", "rt-multi-thread", "time"] }
tracing = { version = "0.1.41" }
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }

# REST API
axum = { version = "0.7.7", features = ["json"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = { version = "1.0.135" }
